# aiko-card

./: pyproject.toml
aiko_card/: __main__.py  anki.py  formatting.py  screenshot.py
